<resources>
    <string name="app_name">Australian Currency Converter</string>
    <string name="americanValue">United States Dollars</string>
    <string name="australianValue">Australian Dollars</string>
    <string name="settingsButtonText">Settings</string>
    <string name="convertButtonText">Convert</string>
    <string name="aud">AUD</string>
    <string name="usd">USD</string>
    <string name="euros_conversion">Euros Conversion</string>
    <string name="usd_conversion">USD Conversion</string>
    <string name="yen_conversion">YEN Conversion</string>
    <string name="sek_conversion">SEK Conversion</string>
    <string name="switch_conversion">Switch Conversion</string>
</resources>
