<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kyecook.kyecook_utilityapp.MainActivity"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/americanValue"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:id="@+id/usTextField" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/moneyToConvertInput"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            android:text="@string/convertButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/conversionButton"
            android:layout_gravity="bottom"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="normal|bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/australianValue"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:id="@+id/ausText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:id="@+id/convertedCurrency" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">


        <Button
            android:text="@string/settingsButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/settingsButton"
            android:layout_gravity="bottom"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="normal|bold" />
    </LinearLayout>
</LinearLayout>
