<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kyecook.kyecook_utilityapp.settingsActivity"
    android:background="@android:color/darker_gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:text="@string/euros_conversion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/changeToEUR"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="normal|bold"
            android:textSize="30sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:text="@string/usd_conversion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/changeToUSD"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="normal|bold"
            android:textSize="30sp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:text="@string/yen_conversion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/changeToYEN"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="normal|bold"
            android:textSize="30sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:text="@string/sek_conversion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/changeToSEK"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="normal|bold"
            android:textSize="30sp"/>
    </LinearLayout>
    <Button
        android:text="BACK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/backButton"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp"
        android:onClick="backHandler" />

</LinearLayout>
